# CGPE

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
cgpe/analysis/: expected_value.py  profit_analysis.py
cgpe/cli/: set_profit.py
cgpe/config/: scraper.py
cgpe/http/: client.py  header_rotator.py  headers.py  rate_limit.py  session.py
cgpe/logging/: logger.py
cgpe/models/: detail.py  set.py
cgpe/pipeline/: category.py  category_pipeline.py  detail.py  detail_pipeline.py  discover_details_from_category.py  set.py  set_pipeline.py
cgpe/scrape/category/: parse_category.py
cgpe/scrape/detail/: parse_detail.py
cgpe/scrape/index/: pokemon_sets.py
cgpe/scrape/pricecharting/category/: parse_category.py
cgpe/scrape/pricecharting/detail/: parse_detail.py
cgpe/scrape/pricecharting/set/: fetch_set.py  parse_set.py
cgpe/scrape/set/: fetch_set.py  parse_set.py
cgpe/scrape/sources/: base.py  pokemon.py
cgpe/scrape/tcgplayer/: sales.py
cgpe/scripts/: print_db.py
cgpe/services/: backfill_sets.py
cgpe/storage/: detail_repo.py  sqlite_db.py
cgpe/storage/queries/: web_search.py
cgpe/utils/: json.py  time.py
cgpe/web/: app.py
cgpe/web/services/: enrich.py  profit_board.py
cgpe/web/static/: search.css
cgpe/web/templates/: card.html  profit.html  search.html
